--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ coverage.xml
 
 # Sphinx documentation
 docs/_build/
+.ipynb_checkpoints/UbiquiPy_Demo-checkpoint.ipynb
+models/.ipynb_checkpoints/UniFiNetAPI-checkpoint.py
+UbiquiPy_Demo.ipynb
